# support-conditioned-risk-profiles

./: .gitignore  CITATION.cff  MANIFEST.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
docs/: GOOGLE_DRIVE_DATA.md  REPRODUCIBILITY.md
experiments/: __init__.py  exp1_profile_estimability.py  exp2_support_gap.py  exp3_local_polynomial.py  exp3_rate_controlled.py  exp4_krr_decomposition.py  exp5_support_only_insufficiency.py  exp6_model_selection.py  exp7_acquisition.py  exp7_conflict_v2.py  exp8_real_data.py  figure_layout_utils.py
figures/: README.md
results/: README.md
scripts/: download_data.py  make_exp6_twopanel_plot.py  make_tables.py  postprocess_exp6_sensitivity.py  postprocess_exp7_conflict_v2.py  profile_construction_sensitivity.py  reproduce_main_figures.py  reproduce_supplement_figures.py  smoke_test.py
src/scrp/: __init__.py
